Map z-index fix

--- a/wp-content/themes/giger-kms/src/sass/_modules.scss
+++ b/wp-content/themes/giger-kms/src/sass/_modules.scss
@@ -57,6 +57,10 @@
 	}
 }
 
+.leaflet-bottom, .leaflet-top {
+	z-index: 200;
+}
+
 
 /** add to calnedar **/
 //commons
